Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91871

View3D with no size specified crashes with OpenGL only

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.1.0 RC
    • 6.1
    • Quick: 3D
    • None
    • 2713a7a9f8292e4c340fb9b5ea0decfc65f2c6a7 (qt/qtquick3d/dev) 3ab266ec929688c1c437dc2d1cdf190b71300096 (qt/qtquick3d/6.1)
    • Qt Quick 3D - 2021 Week 11/12

      Not setting a width or height or anchors for a View3D can lead to a crash, but only when running with OpenGL. Whereas Vulkan and D3D do not crash.

      New Lancelot test showcasing the problem is at https://codereview.qt-project.org/c/qt/qtquick3d/+/339071

       	Qt6Gui.dll!QRhiGles2::enqueueResourceUpdates(QRhiCommandBuffer * cb, QRhiResourceUpdateBatch * resourceUpdates) Line 1950	C++
      >	Qt6Quick3D.dll!QQuick3DSceneRenderer::renderToRhiTexture(QQuickWindow * qw) Line 381	C++
       	Qt6Quick3D.dll!SGFramebufferObjectNode::render() Line 118	C++
       	Qt6Quick.dll!QSGRenderer::preprocess() Line 262	C++
       	Qt6Quick.dll!QSGRenderer::renderScene() Line 176	C++
       	[Inline Frame] Qt6Quick.dll!QQuickWindow::afterRendering() Line 580	C++
       	Qt6Quick.dll!QQuickWindowPrivate::renderSceneGraph(const QSize & size, const QSize & surfaceSize) Line 683	C++
       	Qt6Quick.dll!QSGRenderThread::syncAndRender() Line 788	C++
       	Qt6Quick.dll!QSGRenderThread::run() Line 991	C++
       	Qt6Core.dll!QThreadPrivate::start(void * arg) Line 329	C++
      

        For Gerrit Dashboard: QTBUG-91871
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes