Skip progressive/temporal AA when the initial size is 0

A View3D with no size will not yet create some resources (because the
size has not changed), so avoid doing operations with null resources.

Pick-to: 6.1
Fixes: QTBUG-91871
Change-Id: I6f989be3b292bc7b6fd8cb077a395669df954681
Reviewed-by: Andy Nichols <andy.nichols@qt.io>